[package]
name = "model_pressure"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime and HTTP client/server
tokio = { version = "1.40", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Redis async - 统一使用 0.24 版本以兼容 deadpool-redis
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
deadpool-redis = "0.14"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json"] }

# Config and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Rate limiting - removed, using Redis-based distributed rate limiting

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
tracing-appender = "0.2"  # 用于日志文件输出

# HTTP middleware for observability
tower-http = { version = "0.5", features = ["trace", "cors"] }

anyhow = "1.0"
uuid = { version = "1.3", features = ["v4"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
prometheus = "0.14"
once_cell = "1.20"

[profile.release]
opt-level = 3
